--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,9 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-          
+            - uses: actions/checkout@v1
+              with:
+                    submodules: true
 
             - name: Setup Node.js 10.x
               uses: actions/setup-node@master
@@ -26,4 +28,4 @@ jobs:
                   access-key-id: ${{ secrets.ACCESS_KEY_ID }}
                   access-key-secret: ${{ secrets.ACCESS_KEY_SECRET }}
             - name: cp files to aliyun
-              run: ossutil cp -ruf public oss://mumukehao # 将xxxxx改为创建的Bucket名称，-rf表示覆盖
+              run: ossutil cp -ruf public oss://mumukehao/ # 将xxxxx改为创建的Bucket名称，-rf表示覆盖
