--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,18 +11,11 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-
-
-            - name: Setup Node.js 10.x
-              uses: actions/setup-node@master
-              with:
-                  node-version: '10.x'
-
-            
+            - uses: actions/checkout@master
             - name: setup aliyun oss
               uses: manyuanrong/setup-ossutil@v3.0
               with:
-                  endpoint: oss-cn-shanghai.aliyuncs.com
+                  endpoint: "oss.aliyuncs.com"
                   access-key-id: ${{ secrets.ACCESS_KEY_ID }}
                   access-key-secret: ${{ secrets.ACCESS_KEY_SECRET }}
             - name: cp files to aliyun
